# support-agent-mcp

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  pyproject.toml
.prompts/: domain2-build-exercise.prompt.md
deliverables/: domain2-build-exercise.md
src/support_agent/: __init__.py  backend.py  cap_basis.py  config.py  demo.py  errors.py  handlers.py  live.py  live_demo.py  mcp_client_demo.py  propagation.py  router.py  server.py  tools.py
tests/: test_access_vs_empty.py  test_cap_basis.py  test_customers.py  test_errors.py  test_mcp_client_demo.py  test_mcp_config.py  test_propagation.py  test_routing.py  test_server.py  test_tool_descriptions.py
